udapted CORS for vercel